--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "dependencies": {
+    "babel": "^6.23.0",
     "express": "^4.15.4",
     "global": "^4.3.2",
+    "mongoose": "^4.12.4",
+    "node-twitter-api": "^1.8.0",
     "sentiment": "^4.0.0",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.1.0",
+    "babel-cli": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "flow-remove-types": "^1.2.1"
+  },
+  "scripts": {
+    "build": "babel src/ --out-dir dist/ --no-babelrc --presets=flow --ignore spec.js",
+    "dev": "yarn run build && node dist/backend.js"
   }
 }
