--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "build": "babel src/ --out-dir dist/ --no-babelrc --presets=flow --ignore spec.js",
-    "dev": "yarn run build && node dist/backend.js"
+    "dev": "yarn run build && node dist/backend.js",
+    "start": "node dist/backend.js"
   }
 }
